Test/error/test-if-1.cmm
int main()
{
    if ((a > 1) {
        print(x);
    }
}
